--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "socket.h": "c",
         "stdio.h": "c",
-        "inet.h": "c"
+        "inet.h": "c",
+        "source.h": "c"
     }
 }
